# git-release-updater

./: .env  .env.example  .gitignore  Cargo.toml  FUNCTIONALITY.md  README.md
.claude/skills/caveman/: SKILL.md
.copilot/instructions/: documentation.instructions.md  dry.instructions.md  tests.instructions.md  versions.instructions.md
.github/instructions/: documentation.instructions.md  tests.instructions.md  versions.instructions.md
scripts/: build-release.ps1
src/: download.rs  hash.rs  lib.rs  main.rs  release.rs  request.rs  util.rs  version.rs
tests/: download_test.rs  hash_test.rs  main_test.rs  release_test.rs  util_test.rs  version_test.rs
