[package]
name = "git-release-updater"
version = "1.0.0"
edition = "2024"
authors = ["Imthatguyhere (ITGH | Tyler)"]

[dependencies]
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
clap = { version = "4", features = ["derive", "env"] }
sha2 = "0.11"
hex = "0.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"